--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="centered">
-        <h1>iAlgoAz</h1>
+        <a href="https://github.com/z3ven/iAlgoAz"><h1>iAlgoAz</h1></a>
         <p>Welcome to the application!</p>
         <p>Добро пожаловать в приложение!</p>
         <p>Proqrama xoş gəlmisiniz!</p>
@@ -22,6 +22,9 @@
             <a href="https://learn.algoritmika.az">Открыть</a>
             <a href="https://learn.algoritmika.az">Açmaq</a>
         </div>
+    </div>
+    <div class="footer">
+        <p>Copyright &copy; <a href="https://github.com/z3ven/">z3ven(Abbas Lutvaliyev)</a> 2023</p>
     </div>
 </body>
 </html>
